update api - 1.0.2
