# api/models/Instituicao.php
@@ -7,15 +7,33 @@ use InvalidArgumentException;
 /**
  * @OA\Schema(
  *     schema="Instituicao",
+ *     type="object",
  *     required={"id", "nome"},
  *     @OA\Property(property="id", type="integer", example=1),
- *     @OA\Property(property="nome", type="string", example="Casa Verde"),
- *     @OA\Property(property="endereco", type="string", example="Rua A, 123"),
+ *     @OA\Property(property="nome", type="string", example="Faculdade Municipal de Palhoça"),
+ *     @OA\Property(property="uf", type="string", example="SC"),
+ *     @OA\Property(property="cidade", type="string", example="Palhoça"),
+ *     @OA\Property(property="bairro", type="string", example="Centro"),
+ *     @OA\Property(property="tipo_servico", type="string", example="Coleta"),
  *     @OA\Property(property="usuario_id", type="integer", example=2),
- *     @OA\Property(property="tipos_coleta", type="array", @OA\Items(ref="#/components/schemas/TipoColeta")),
- *     @OA\Property(property="horarios_funcionamento", type="array", @OA\Items(type="string"))
+ *
+ *     @OA\Property(
+ *         property="usuario",
+ *         ref="#/components/schemas/Usuario"
+ *     ),
+ *     @OA\Property(
+ *         property="tipos_coleta",
+ *         type="array",
+ *         @OA\Items(ref="#/components/schemas/TipoColeta")
+ *     ),
+ *     @OA\Property(
+ *         property="horarios_funcionamento",
+ *         type="array",
+ *         @OA\Items(ref="#/components/schemas/HorariosFuncionamento")
+ *     )
  * )
  */
+
 class Instituicao extends Model {
     protected $table = 'instituicoes';
     protected $primaryKey = 'id_instituicao';
